--- a/src/main/webapp/origami/getOrigami.html
+++ b/src/main/webapp/origami/getOrigami.html
@@ -17,7 +17,8 @@
          </tr> 
          <tr>
          <td>
-          <div>类型<input type="hidden" class="input-medium medium" ng-model="searchForm.typeId"/><input type="text" class="input-medium medium" ng-model="searchForm.typeName" disabled="disabled"/></div> 
+          <div>类型<input type="hidden" class="input-medium medium" ng-model="searchForm.typeId"/>
+          <input type="text" class="input-medium medium" ng-model="searchForm.typeName" disabled="disabled"/></div> 
          </td>
          
          </tr>
