增加公共提示框

--- a/src/main/webapp/origami/addOrigami.html
+++ b/src/main/webapp/origami/addOrigami.html
@@ -28,6 +28,7 @@
     </table>
     </form>
 </div>
+<div ng-include="'../hapui/compage/tipmodal.html'"></div>
 <script async="async" defer="defer" src="../hapui/plugins/requireJs/require.js" data-main="../hapui/js/main.js"></script>
 </body>
 </html>
