--- a/src/main/webapp/origami/editOrigami.html
+++ b/src/main/webapp/origami/editOrigami.html
@@ -23,6 +23,7 @@
     </table>
     </form>
 </div>
+<div ng-include="'../hapui/compage/tipmodal.html'"></div>
 <script async="async" defer="defer" src="../hapui/plugins/requireJs/require.js" data-main="../hapui/js/main.js"></script>
 </body>
 </html>
