拼音简写和五笔简写的自动生成

--- a/src/main/webapp/cust/customer.html
+++ b/src/main/webapp/cust/customer.html
@@ -48,7 +48,7 @@
 									<label class="control-label"><b style="color: red;">*</b>名称</label>
 								</td>
 								<td>
-									<input id="alter_name" type="text" ng-model="addForm.name" placeholder="请输入中文名称" class="input-medium">
+									<input id="add_name" type="text" ng-model="addForm.name" placeholder="请输入中文名称" class="input-medium">
 								</td>
 								<td>
 									<label class="control-label"><b style="color: red;">*</b>性别编码</label>
@@ -83,6 +83,20 @@
 								</td>
 								<td>
 									<input type="text" ng-model="addForm.tel" placeholder="" class="input-medium">
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<label class="control-label">拼音简写</label>
+								</td>
+								<td>
+									<input type="text" ng-model="addForm.spellNo" placeholder="请修改拼音简写" class="input-medium">
+								</td>
+								<td>
+									<label class="control-label"><b style="color: red;"></b>五笔简写</label>
+								</td>
+								<td>
+									<input type="text" ng-model="addForm.wubiNo" placeholder="" class="input-medium">
 								</td>
 							</tr>
 							<tr>
@@ -178,6 +192,20 @@
 								</td>
 								<td>
 									<input type="text" ng-model="alterForm.tel" placeholder="" class="input-medium">
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<label class="control-label">拼音简写</label>
+								</td>
+								<td>
+									<input type="text" ng-model="alterForm.spellNo" placeholder="请修改拼音简写" class="input-medium">
+								</td>
+								<td>
+									<label class="control-label"><b style="color: red;"></b>五笔简写</label>
+								</td>
+								<td>
+									<input type="text" ng-model="alterForm.wubiNo" placeholder="" class="input-medium">
 								</td>
 							</tr>
 							<tr>
